<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <TextView
    android:id="@+id/message"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:visibility="invisible"
    style="@style/supplement_text"
  />
    <TextView
    android:id="@+id/supplementation"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/add_runner_supplementation"
    style="@style/supplement_text"
  />
  <TextView
    android:id="@+id/form_label_runner_number"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/form_label_runner_number"
  />
  <EditText
    android:id="@+id/runner_number"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:numeric="integer"
  />
  <TextView
    android:id="@+id/form_label_runner_name"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/form_label_runner_name"
  />
  <EditText
    android:id="@+id/runner_name"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
  />
  <Button
    android:id="@+id/button_edit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_add_runner"></Button>

</LinearLayout>