<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
  <TextView
    android:id="@+id/form_label_months_to_get_data"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/months_to_get_data"
  />
  <Spinner
    android:id="@+id/months_to_get_data"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="true"
    android:prompt="@string/months_to_get_data"
  />
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="horizontal" >
    <Button
      android:id="@+id/button_edit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/button_edit"></Button>
    <Button
      android:id="@+id/button_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/button_cancel"></Button>
  </LinearLayout>
</LinearLayout>